--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header>NOME DA SUA STARTUP</header>
+    <header>i9Solos</header>
 
     <main>
         <div>
@@ -22,7 +22,7 @@
     </main>
 
     <footer>
-        &copy; 2024 Nome da Sua Startup. Todos os direitos reservados.
+        &copy; 2024 i9Solos. Todos os direitos reservados.
     </footer>
 
 </body>
