--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         header { background: #333; color: white; padding: 40px 20px; font-size: 2em; font-weight: bold; }
         main { flex: 1; display: flex; align-items: center; justify-content: center; font-size: 1.5em; color: #555; }
         footer { background: #f4f4f4; padding: 20px; font-size: 0.9em; color: #777; border-top: 1px solid #ddd; }
+        a { color: #333; text-decoration: none; font-weight: bold; }
+        a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
@@ -18,7 +20,8 @@
     <main>
         <div>
             <p>Bem-Vindo!</p>
-            </div>
+            <p><a href="fertysolos/privacy.html">Política de Privacidade</a></p>
+        </div>
     </main>
 
     <footer>
