Update nomes app

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 
-    <header>i9Solos</header>
+    <header>i9Solos/FertySolos</header>
 
     <main>
         <div>
             <p>Bem-Vindo!</p>
-            <p><a href="fertysolos/privacy.html">Política de Privacidade</a></p>
+            <p><a href="fertysolos/privacy.html">FertySolos/Política de Privacidade</a></p>
         </div>
     </main>
 
