--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sua Startup - Apps</title>
+    <title>i9Solos - Apps</title>
     <style>
         body { font-family: sans-serif; margin: 0; display: flex; flex-direction: column; min-height: 100vh; text-align: center; }
         header { background: #333; color: white; padding: 40px 20px; font-size: 2em; font-weight: bold; }
@@ -20,7 +20,7 @@
     <main>
         <div>
             <p>Bem-Vindo!</p>
-            <p><a href="fertysolos/privacy.html">FertySolos/Política de Privacidade</a></p>
+            <p><a href="fertysolos/privacy.html">FertySolos - Política de Privacidade</a></p>
         </div>
     </main>
 
