Update politicas app

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <div>
             <p>Bem-Vindo!</p>
             <p><a href="fertysolos/privacy.html">FertySolos - Política de Privacidade</a></p>
+            <p><a href="calculadoranpk/privacy.html">Calculadora NPK - Política de Privacidade</a></p>
+            <p><a href="morfologiadesolos/privacy.html">Morfologia de Solos - Política de Privacidade</a></p>
+            <p><a href="soloquis/privacy.html">SoloQuiz - Política de Privacidade</a></p>
         </div>
     </main>
 
