--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <header>
     <h1>i9Solos</h1>
-    <p>Aplicativos educacionais e técnicos para solos, fertilidade e agricultura</p>
+    <p>Aplicativos educacionais e técnicos para a ciência do solo e a agricultura</p>
 </header>
 
 <main>
