Update logo principal

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 <header>
     <h1>i9Solos</h1>
     <p>Aplicativos educacionais e técnicos para a ciência do solo e a agricultura</p>
+    <img src="icons/logo-principal.png" alt="Logo i9Solos" class="header-logo">
 </header>
 
 <main>
