Update logo princial tamanho

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             max-width: 1100px;
             margin: auto;
         }
+        .header-logo {
+        width: 60px;  /* Você pode usar px, % ou rem */
+        height: auto;   /* Mantém a proporção original */
+        }
 
         .apps {
             display: grid;
@@ -105,7 +109,7 @@
 <header>
     <h1>i9Solos</h1>
     <p>Aplicativos educacionais e técnicos para a ciência do solo e a agricultura</p>
-    <img src="icons/logo-principal.png" alt="Logo i9Solos" class="header-logo">
+    <img src="icons/logo-principal.png" alt="Logo i9Solos" class="header-logo" style="width: 60px;">
 </header>
 
 <main>
