Update ico logo

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <header>
     <h1>i9Solos</h1>
     <p>Aplicativos educacionais e técnicos para a ciência do solo e a agricultura</p>
-    <img src="icons/logo-principal.png" alt="Logo i9Solos" class="header-logo" style="width: 60px;">
+    <img src="icons/inovesolos_logo.png" alt="Logo i9Solos" class="header-logo" style="width: 60px;">
 </header>
 
 <main>
