--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background: #2c3e50;
+            background: rgb(44, 62, 80);
             color: #fff;
             padding: 20px 20px;
             text-align: center;
