Update nome logo

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <body>
 
 <header>
-    <img src="icons/inovesolos_logo.png" alt="Logo i9Solos" class="header-logo" style="width: 100px;">
+    <img src="icons/logo_principal.png" alt="Logo i9Solos" class="header-logo" style="width: 100px;">
     <h1>i9Solos</h1>
     <p>Aplicativos educacionais e técnicos para a ciência do solo e a agricultura</p>
 </header>
