--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <header>
     <img src="icons/logo_principal.png" alt="Logo i9Solos" class="header-logo" style="width: 100px;">
-    <h1>i9Solos</h1>
+    <!-- <h1>i9Solos</h1>-->
     <p>Aplicativos educacionais e técnicos para a ciência do solo e a agricultura</p>
 </header>
 
