--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <header>
     <img src="icons/logo_principal.png" alt="Logo i9Solos" class="header-logo" style="width: 100px;">
     <!-- <h1>i9Solos</h1>-->
-    <p>Aplicativos educacionais e técnicos para a ciência do solo e a agricultura</p>
+    <p>Aplicativos educacionais e técnicos para ciência do solo e agricultura</p>
 </header>
 
 <main>
@@ -117,7 +117,7 @@
 
                <!-- Solos Férteis -->
         <div class="app-card">
-            <img src="icons/solosferteis.png" alt="Solos Férteis" class="app-icon">
+            <img src="icons/solosferteis.png" alt="FertySolos" class="app-icon">
             <div class="app-title">Solos Férteis</div>
             <div class="app-desc">
                 Aplicativo técnico para planejamento, manejo e interpretação da fertilidade do solo.
