Update nome app fertysolos

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                <!-- Solos Férteis -->
         <div class="app-card">
             <img src="icons/solosferteis.png" alt="FertySolos" class="app-icon">
-            <div class="app-title">Solos Férteis</div>
+            <div class="app-title">FertySolos</div>
             <div class="app-desc">
                 Aplicativo técnico para planejamento, manejo e interpretação da fertilidade do solo.
             </div>
