--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         header {
             background: rgb(255, 255, 255);
-            color: #fff;
+            color: #3fc709;
             padding: 20px 20px;
             text-align: center;
         }
