--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         header {
             background: rgb(255, 255, 255);
-            color: #3fc709;
-            padding: 20px 20px;
+            color: #000000;
+            padding: 10px 10px;
             text-align: center;
         }
 
